Greater queue height on mobile to avoid nested scrolling

--- a/app/static/css/player.css
+++ b/app/static/css/player.css
@@ -197,7 +197,14 @@
 /* QUEUE */
 
 .box-queue .scroll {
-    height: 30vh;
+    max-height: 35vh;
+}
+
+/* allow greater height on mobile */
+@media screen and (max-width: 900px) {
+    .box-queue .scroll {
+        max-height: 40rem;
+    }
 }
 
 .box-queue h3 {
@@ -385,5 +392,5 @@ input[type=range].input-volume-low::-moz-range-thumb {
 }
 
 .theater .box-queue .scroll {
-    height: 40vh;
+    max-height: 45vh;
 }
